Fixed responsive layout issues when viewing posts on mobile

--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -15,6 +15,7 @@ body {
     display: block;
     width: 90%;
     margin: 0 auto;
+    padding: 100px 0 3em 0;
     max-width: 650px;
     height: auto;
     text-align: left;
@@ -107,6 +108,18 @@ body {
     max-width: 100%;
     display: block;
     margin: auto;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.post-body h1,
+.post-body h2,
+.post-body h3,
+.post-body h4,
+.post-body h5,
+.post-body h6 {
+    margin: 1em 0 .5em 0;
 }
 
 .center-center-wrapper .center-center-container {
@@ -140,9 +153,7 @@ body {
         background-repeat: no-repeat;
         background-position: center center;
     }
-}
 
-@media only screen and (max-width: 768px) {
     .post-body .header-details h1 {
         font-size: 1.5em;
     }
